force-app/main/default/objects/GTM_Instrument_Definition__c/GTM_Instrument_Definition__c.object-meta.xml
<CustomObject>
    <label>GTM Instrument Definition</label>
    <pluralLabel>GTM Instrument Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <type>Text</type>
        <label>Instrument Name</label>
    </nameField>
</CustomObject>