force-app/main/default/objects/GTM_Instrument_Definition__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <description>Lifecycle state of this instrument definition. Draft/Archived rows are excluded from the guest-facing availability check -- only an Active row makes the assessment available for an opted-in offering (see docs/architecture/gtm-instrument-schema.md).</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><label>Draft</label><default>true</default></value>
            <value><fullName>Active</fullName><label>Active</label><default>false</default></value>
            <value><fullName>Archived</fullName><label>Archived</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>