force-app/main/default/objects/GTM_Instrument_Definition__c/fields/Theme_Key__c.field-meta.xml
<CustomField>
    <fullName>Theme_Key__c</fullName>
    <label>Theme Key</label>
    <description>Optional free-text key matching GTM_Instrument_Theme__mdt.DeveloperName -- same plain-text convention as Offering_Key__c (ADR-0009), no formal metadata relationship. Blank means the instrument renders with the default (unthemed) style.</description>
    <type>Text</type>
    <length>100</length>
</CustomField>