force-app/main/default/objects/GTM_Instrument_Definition__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <description>Bumped on each publish by the Apex controller introduced in sub-issue 02/03. Starts at 1 on creation.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <required>true</required>
    <defaultValue>1</defaultValue>
</CustomField>